[gd_scene load_steps=8 format=3 uid="uid://d2bnyn3hh5vva"]

[ext_resource type="Texture2D" uid="uid://c05dp35likkjs" path="res://resources/sprites/icons/weapon_icons/sword_icon.png" id="1_27a5s"]
[ext_resource type="Script" uid="uid://cilsomyit56sv" path="res://campaign_map/campaign_map_room.gd" id="1_w1275"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_evsr8"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_t8wdb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Line2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xjceh"]
resource_name = "highlight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25)]
}

[sub_resource type="Animation" id="Animation_t8ldv"]
resource_name = "select"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Line2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_map_room_selected"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_86uj1"]
_data = {
&"RESET": SubResource("Animation_t8wdb"),
&"highlight": SubResource("Animation_xjceh"),
&"select": SubResource("Animation_t8ldv")
}

[node name="CampaignMapRoom" type="Control"]
modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 3
anchors_preset = 0
focus_mode = 2
script = ExtResource("1_w1275")

[node name="Visuals" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="Visuals"]
modulate = Color(1, 1, 1, 0)
points = PackedVector2Array(-6, -12, 6, -12, 10, -6, 10, 8, 6, 12, -6, 12, -10, 8, -10, -8, -8, -10)
closed = true
width = 2.0

[node name="Backdrop" type="Sprite2D" parent="Visuals"]
modulate = Color(0, 0, 0, 1)
texture = SubResource("PlaceholderTexture2D_evsr8")

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_27a5s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_86uj1")
}

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
